RESOLVED FIXED 258816
Reload reducing privacy protections does not work for navigational protections after redirection
https://bugs.webkit.org/show_bug.cgi?id=258816
Summary Reload reducing privacy protections does not work for navigational protection...
Charlie Wolfe
Reported 2023-07-03 11:01:32 PDT
...
Attachments
Charlie Wolfe
Comment 1 2023-07-03 11:01:45 PDT
Charlie Wolfe
Comment 2 2023-07-03 11:08:46 PDT
EWS
Comment 3 2023-07-05 11:14:50 PDT
Committed 265774@main (fab481e2f930): <https://commits.webkit.org/265774@main> Reviewed commits have been landed. Closing PR #15506 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.