Tools/TestWebKitAPI/Tests/WebKit/AdvancedPrivacyProtections.mm
@@ -587,7 +587,7 @@ TEST(AdvancedPrivacyProtections, LinkPreconnectUsesEnhancedPrivacy)
 
 #endif // HAVE(SYSTEM_SUPPORT_FOR_ADVANCED_PRIVACY_PROTECTIONS)
 
-static RetainPtr<TestWKWebView> webViewAfterCrossSiteNavigationWithReducedPrivacy(NSString *initialURLString)
+static RetainPtr<TestWKWebView> webViewAfterCrossSiteNavigationWithReducedPrivacy(NSString *initialURLString, bool withRedirect = false)
 {
     auto preferences = adoptNS([WKWebpagePreferences new]);
     [preferences _setNetworkConnectionIntegrityPolicy:_WKWebsiteNetworkConnectionIntegrityPolicyNone];
@@ -610,6 +610,8 @@ static RetainPtr<TestWKWebView> webViewAfterCrossSiteNavigationWithReducedPrivac
 
     [webView evaluateJavaScript:@"document.querySelector('a').click()" completionHandler:nil];
     [navigationDelegate waitForDidFinishNavigation];
+    if (withRedirect)
+        [navigationDelegate waitForDidFinishNavigation];
 
     return webView;
 }
@@ -629,6 +631,38 @@ TEST(AdvancedPrivacyProtections, DoNotHideReferrerAfterReducingPrivacyProtection
     EXPECT_WK_STREQ(expectedReferrer, result);
 }
 
+TEST(AdvancedPrivacyProtections, DoNotHideReferrerAfterReducingPrivacyProtectionsWithJSRedirect)
+{
+    HTTPServer server({
+        { "/destination.html"_s, { "<script>window.result = document.referrer;</script>"_s } },
+    }, HTTPServer::Protocol::Http);
+
+    server.addResponse("/source.html"_s, { makeString("<a href='http://127.0.0.1:"_s, server.port(), "/redirect.html'>Link</a>"_s) });
+    server.addResponse("/redirect.html"_s, { makeString("<script>window.location = 'http://localhost:"_s, server.port(), "/destination.html';</script>"_s) });
+
+    auto webView = webViewAfterCrossSiteNavigationWithReducedPrivacy(makeString("http://localhost:"_s, server.port(), "/source.html"_s), true);
+
+    NSString *result = [webView objectByEvaluatingJavaScript:@"window.result"];
+    NSString *expectedReferrer = [NSString stringWithFormat:@"http://127.0.0.1:%d/", server.port()];
+    EXPECT_WK_STREQ(expectedReferrer, result);
+}
+
+TEST(AdvancedPrivacyProtections, DoNotHideReferrerAfterReducingPrivacyProtectionsWithHTTPRedirect)
+{
+    HTTPServer server({
+        { "/destination.html"_s, { "<script>window.result = document.referrer;</script>"_s } },
+    }, HTTPServer::Protocol::Http);
+
+    server.addResponse("/source.html"_s, { makeString("<a href='http://127.0.0.1:"_s, server.port(), "/redirect'>Link</a>"_s) });
+    server.addResponse("/redirect"_s, { 302, {{"Location"_s, makeString("http://localhost:"_s, server.port(), "/destination.html"_s) }}, "redirecting..."_s });
+
+    auto webView = webViewAfterCrossSiteNavigationWithReducedPrivacy(makeString("http://localhost:"_s, server.port(), "/source.html"_s));
+
+    NSString *result = [webView objectByEvaluatingJavaScript:@"window.result"];
+    NSString *expectedReferrer = [NSString stringWithFormat:@"http://localhost:%d/", server.port()];
+    EXPECT_WK_STREQ(expectedReferrer, result);
+}
+
 TEST(AdvancedPrivacyProtections, DoNotRemoveTrackingParametersAfterReducingPrivacyProtections)
 {
     QueryParameterRequestSwizzler blockListSwizzler { @[ @"someID" ] };
@@ -641,6 +675,33 @@ TEST(AdvancedPrivacyProtections, DoNotRemoveTrackingParametersAfterReducingPriva
     server.addResponse("/index1.html"_s, makeString("<a href='http://127.0.0.1:"_s, server.port(), pathAndQuery, "'>Link</a>"_s));
 
     auto webView = webViewAfterCrossSiteNavigationWithReducedPrivacy(makeString("http://localhost:"_s, server.port(), "/index1.html"_s));
+
+    auto checkForExpectedQueryParameters = [](NSURL *url) {
+        auto parameters = [NSURLComponents componentsWithURL:url resolvingAgainstBaseURL:NO].queryItems;
+        EXPECT_EQ(1U, parameters.count);
+        EXPECT_WK_STREQ("someID", parameters.firstObject.name);
+        EXPECT_WK_STREQ("123", parameters.firstObject.value);
+    };
+
+    auto documentURLString = [webView stringByEvaluatingJavaScript:@"document.URL"];
+
+    checkForExpectedQueryParameters([NSURL URLWithString:documentURLString]);
+    checkForExpectedQueryParameters([webView URL]);
+}
+
+TEST(AdvancedPrivacyProtections, DoNotRemoveTrackingParametersAfterReducingPrivacyProtectionsWithJSRedirect)
+{
+    QueryParameterRequestSwizzler blockListSwizzler { @[ @"someID" ] };
+
+    auto pathAndQuery = "/destination.html?someID=123"_s;
+    HTTPServer server({
+        { pathAndQuery, { "<body>Destination</body>"_s } },
+    }, HTTPServer::Protocol::Http);
+
+    server.addResponse("/source.html"_s, { makeString("<a href='http://127.0.0.1:"_s, server.port(), "/redirect.html'>Link</a>"_s) });
+    server.addResponse("/redirect.html"_s, { makeString("<script>window.location = 'http://localhost:"_s, server.port(), pathAndQuery, "';</script>"_s) });
+
+    auto webView = webViewAfterCrossSiteNavigationWithReducedPrivacy(makeString("http://localhost:"_s, server.port(), "/source.html"_s), true);
 
     auto checkForExpectedQueryParameters = [](NSURL *url) {
         auto parameters = [NSURLComponents componentsWithURL:url resolvingAgainstBaseURL:NO].queryItems;
